[package]
name = "gerust"
version = "0.1.0"
authors = ["Pablo Androetto <androettop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.commands]
prerun = "clear && cargo build" 
run = "./target/debug/gerust"

[dependencies.sdl2]
version = "0.34.4"
default-features = false
features = ["ttf"]